[package]
name = "goober-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = "0.31"
md5 = "0.7"
base64 = "0.21"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
